--- a/packages/supabase/tsconfig.json
+++ b/packages/supabase/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@rr7-supabase-starter/tsconfig/base.json",
+  "extends": "@rekipe/tsconfig/base.json",
   "include": ["src"],
   "exclude": ["node_modules"]
 }
