--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -71,7 +71,7 @@ jobs:
           # Docker build
           context: .
           file: ./apps/web/.docker/Dockerfile
-          tags: pchmn/rr7-supabase-starter-web:${{ steps.get_version.outputs.APP_VERSION }}
+          tags: pchmn/rekipe-web:${{ steps.get_version.outputs.APP_VERSION }}
           build-args: |
             APP_VERSION=${{ steps.get_version.outputs.APP_VERSION }}
             APP_VERSION_DATE=${{ steps.get_version.outputs.APP_VERSION_DATE }}
@@ -92,10 +92,10 @@ jobs:
         with:
           dokploy-base-url: ${{ secrets.DOKPLOY_BASE_URL }}
           dokploy-token: ${{ secrets.DOKPLOY_TOKEN }}
-          project-id: 0_G71Uh8nHwvaHXw0eqew
+          project-id: VLGJRVnYYHgu9JerUpR7C
           application-name: Production
-          application-domain: rr7-supabase-starter.pchmn.dev
-          docker-image: pchmn/rr7-supabase-starter-web:${{ needs.build-web.outputs.app_version }}
+          application-domain: rekipe.pchmn.dev
+          docker-image: pchmn/rekipe-web:${{ needs.build-web.outputs.app_version }}
           docker-username: ${{ secrets.DOCKER_USERNAME }}
           docker-password: ${{ secrets.DOCKER_PASSWORD }}
           docker-port: 8080
@@ -104,7 +104,7 @@ jobs:
             SUPABASE_ANON_KEY=${{ secrets.PRODUCTION_SUPABASE_ANON_KEY }}
             SUPABASE_SERVICE_ROLE_KEY=${{ secrets.PRODUCTION_SUPABASE_SERVICE_ROLE_KEY }}
             SESSION_SECRET=${{ secrets.PRODUCTION_SESSION_SECRET }}
-            SITE_URL=https://rr7-supabase-starter.com
+            SITE_URL=https://rekipe.com
 
   release:
     name: 📦 Release
