--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rr7-supabase-starter/web",
-  "version": "0.4.0",
+  "name": "@rekipe/web",
+  "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,7 +10,10 @@
     "preview": "dotenv -e .env -- pnpm start",
     "typecheck": "react-router typegen && tsc"
   },
-  "files": ["build", "public"],
+  "files": [
+    "build",
+    "public"
+  ],
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -20,8 +23,8 @@
     "@react-router/node": "^7.3.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
-    "@rr7-supabase-starter/supabase": "workspace:*",
-    "@rr7-supabase-starter/ui": "workspace:*",
+    "@rekipe/supabase": "workspace:*",
+    "@rekipe/ui": "workspace:*",
     "hono": "^4.6.16",
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
@@ -46,7 +49,7 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
-    "@rr7-supabase-starter/tsconfig": "workspace:*",
+    "@rekipe/tsconfig": "workspace:*",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "react-router-hono-server": "^2.11.0",
