--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "@rr7-supabase-starter/ui",
-  "version": "0.4.0",
+  "name": "@rekipe/ui",
+  "version": "0.0.0",
   "private": true,
   "author": "pchmn",
   "license": "MIT",
-  "files": ["src/style.css"],
+  "files": [
+    "src/style.css"
+  ],
   "scripts": {
     "format": "biome format --write .",
     "codemod:react19": "npx codemod react/19/remove-forward-ref"
@@ -15,7 +17,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.0",
-    "@rr7-supabase-starter/tsconfig": "workspace:*",
+    "@rekipe/tsconfig": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "autoprefixer": "^10.4.20",
