feat(web): init ai chat

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,16 +15,19 @@
     "public"
   ],
   "dependencies": {
+    "@ai-sdk/google": "^1.1.25",
+    "@ai-sdk/react": "^1.1.23",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-router/node": "^7.3.0",
-    "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.47.10",
     "@rekipe/supabase": "workspace:*",
     "@rekipe/ui": "workspace:*",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.47.10",
+    "ai": "^4.1.61",
     "hono": "^4.6.16",
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
@@ -45,11 +48,11 @@
     "@react-router/fs-routes": "^7.3.0",
     "@react-router/remix-config-routes-adapter": "0.0.0-nightly-bf7ecb711-20240911",
     "@react-router/serve": "^7.3.0",
+    "@rekipe/tsconfig": "workspace:*",
     "@tailwindcss/vite": "^4.0.7",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
-    "@rekipe/tsconfig": "workspace:*",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "react-router-hono-server": "^2.11.0",
