--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -105,6 +105,7 @@ jobs:
             SUPABASE_SERVICE_ROLE_KEY=${{ secrets.PRODUCTION_SUPABASE_SERVICE_ROLE_KEY }}
             SESSION_SECRET=${{ secrets.PRODUCTION_SESSION_SECRET }}
             SITE_URL=https://rekipe.com
+            GOOGLE_GENERATIVE_AI_API_KEY=${{ secrets.GOOGLE_GENERATIVE_AI_API_KEY }}
 
   release:
     name: 📦 Release
